[tool.poetry]
name = "debug"
version = "0.1.0"
description = ""
authors = ["Andy Pilate <andy.pilate@akimed.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
overrides = "^7.7.0"
orjson = "^3.10.3"
aiofiles = "^24.1.0"
dacite = "^1.8.1"
async-lru = "^2.0.4"
bcrypt = "^4.1.3"
pandas = "^2.2.2"
pyjwt = "^2.9.0"
cryptography = "^43.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"
pyyaml = "^6.0.1"
mypy = "^1.10.0"
flake8 = "^7.1.1"
ipykernel = "^6.29.4"
pytest = "^8.3.2"
scaleway = "^2.6.0"
setuptools = "^73.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
